@@ -102,7 +102,15 @@ public#if("true" == "${object.isAbstract()}") abstract#end class ${subClassName}
 ###################
 #foreach( $attr in ${object.DeclaredAttributes} )
 ## don't use primitive type if attribute is nullable
-#set ( $type = "$importUtils.formatJavaType(${attr.Type}, $attr.isMandatory())")
+## if PK was modeled as object type use object type
+## and use primitives for PK if it was modeled as primitive.
+#set ( $flag = $attr.isMandatory() && $attr.isPrimaryKey())
+#if ( $flag )
+    #set ( $flag = $flag && $importUtils.isPrimitive(${attr.Type}))
+#elseif ( $attr.isMandatory() )
+    #set ( $flag = !$flag)
+#end
+#set ( $type = "$importUtils.formatJavaType(${attr.Type}, $flag)")
     protected $type $stringUtils.formatVariableName(${attr.Name});
 #end
 
@@ -227,7 +235,13 @@ public#if("true" == "${object.isAbstract()}") abstract#end class ${subClassName}
 
         switch (propName) {
 #foreach( $attr in ${object.DeclaredAttributes} )
-#set ( $type = "$importUtils.formatJavaType(${attr.Type}, $attr.isMandatory())")
+#set ( $flag = $attr.isMandatory() && $attr.isPrimaryKey() )
+#if ( $flag )
+    #set ( $flag = $flag && $importUtils.isPrimitive(${attr.Type}) )
+#elseif ( $attr.isMandatory() )
+    #set ( $flag = !$flag )
+#end
+#set ( $type = "$importUtils.formatJavaType(${attr.Type}, $flag)")
 #set ( $name = "$stringUtils.formatVariableName(${attr.Name})")
             case "${attr.Name}":
 #if ( $importUtils.isBoolean($type) )
@@ -265,7 +279,13 @@ public#if("true" == "${object.isAbstract()}") abstract#end class ${subClassName}
         super.writeState(out);
 #foreach( $attr in ${object.DeclaredAttributes} )
 #set ( $name = "$stringUtils.formatVariableName(${attr.Name})")
-#set ( $type = "$importUtils.formatJavaType(${attr.Type}, $attr.isMandatory())")
+#set ( $flag = $attr.isMandatory() && $attr.isPrimaryKey() )
+#if ( $flag )
+    #set ( $flag = $flag && $importUtils.isPrimitive(${attr.Type}) )
+#elseif ( $attr.isMandatory() )
+    #set ( $flag = !$flag )
+#end
+#set ( $type = "$importUtils.formatJavaType(${attr.Type}, $flag)")
 #if($importUtils.isPrimitive($type))
         out.write${stringUtils.capitalized($type)}(this.$name);
 #else
@@ -282,7 +302,13 @@ public#if("true" == "${object.isAbstract()}") abstract#end class ${subClassName}
         super.readState(in);
 #foreach( $attr in ${object.DeclaredAttributes} )
 #set ( $name = "$stringUtils.formatVariableName(${attr.Name})")
-#set ( $type = "$importUtils.formatJavaType(${attr.Type}, $attr.isMandatory())")
+#set ( $flag = $attr.isMandatory() && $attr.isPrimaryKey() )
+#if ( $flag )
+    #set ( $flag = $flag && $importUtils.isPrimitive(${attr.Type}) )
+#elseif ( $attr.isMandatory() )
+    #set ( $flag = !$flag )
+#end
+#set ( $type = "$importUtils.formatJavaType(${attr.Type}, $flag)")
 #if($importUtils.isPrimitive($type))
         this.$name = in.read${stringUtils.capitalized($type)}();
 #else
