@@ -1,0 +1,9 @@
+package org.apache.cayenne.testdo.meaningful_pk;
+
+import org.apache.cayenne.testdo.meaningful_pk.auto._MeaningfulPkTest2;
+
+public class MeaningfulPkTest2 extends _MeaningfulPkTest2 {
+
+    private static final long serialVersionUID = 1L;
+
+}
