@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <domain xmlns="http://cayenne.apache.org/schema/10/domain"
+	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	 xsi:schemaLocation="http://cayenne.apache.org/schema/10/domain http://cayenne.apache.org/schema/10/domain.xsd"
 	 project-version="10">
 	<map name="meaningful-pk"/>
+	<xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="meaningful-pk.graph.xml"/>
 </domain>
